Pushing to remote, ready for launch.

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                                 <div class="from">Avid Forest Travel User</div>
                             </div>
                         </div>
-                        <p class="review-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                        <p class="review-text">Plus if I was white this would be my name no cap, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                     </div>
                     <div class="review">
                         <div class="reviewer-details">
